hphp/hack/test/typecheck/global_const24.php
<?hh // partial

const X = ++X;

